fix: Increase popup z-index
This fix makes sure that the popup container of the "user" menu (and
potential other containers) is displayed above the "date groups" of the
news.

Follow-up of 4e0363e3

--- a/src/assets/stylesheets/components/popup.css
+++ b/src/assets/stylesheets/components/popup.css
@@ -29,7 +29,7 @@
 
 .popup__container {
     position: fixed;
-    z-index: 10;
+    z-index: 100;
     right: 0;
     bottom: var(--height-header);
     left: 0;
